Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignBoolObjTextObjWrapped.quorum
class main
    action Main
        Text t
        t:setValue("what?")
        Boolean b = t
    end
end